--- a/src/app/components/inventario-general/inventario-general.component.html
+++ b/src/app/components/inventario-general/inventario-general.component.html
@@ -22,7 +22,11 @@
   </nav>
   <div class="viewLote">
     <div >
-        <h1  class="descripcion">LOTES POR FINCA</h1>
+      <div style="text-align: center;">
+        <h1 style="background-color: rgb(197, 239, 173);" class="descripcion">Gráfico de Lotes y Árboles por Fecha</h1>
+        <img src="/assets/img/reproteGrafica.png" style="height: 80px; width: 80px; display: block; margin: 20px auto;">
+      </div>
+
     </div>
     <div class="table-container">
           <div style="width: 100%;height:100%;">
@@ -38,4 +42,7 @@
     
 </div>
 
-<app-footer></app-footer>
+<div class="footer">
+  <!-- Contenido del pie de página -->
+  <app-footer></app-footer>
+</div>
