--- a/src/app/components/registro-plaga-enfermedad/registro-plaga-enfermedad.component.html
+++ b/src/app/components/registro-plaga-enfermedad/registro-plaga-enfermedad.component.html
@@ -70,7 +70,7 @@
 
       <div class="form-group">
         <label for="cantidadIndividuos">Cantidad de Individuos:</label>
-        <input type="number" id="cantidadIndividuos" name="cantidadIndividuos" class="form-control" #cantidadIndividuos>
+        <input type="number" id="cantidadIndividuos" name="cantidadIndividuos" class="form-control" #cantidadIndividuos value="{{CantIndividuos}}">
       </div>
       <div id="tipoEstructuraContainer" *ngIf="tipoEnfermedadPlaga === 2">
         <div class="form-group">
