--- a/src/app/components/lotes-list/lotes-list.component.html
+++ b/src/app/components/lotes-list/lotes-list.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<nav class="navbar ">
+    <nav class="navbar ">
     <div class="container-fluid">
 
         <div class="back-link">
@@ -59,47 +59,12 @@
         
     </div>
 </div>
-<!--<div class="viewLote">
-    <form class="container">
-        <div class="row">
-            <div class="col text-center">
-                <button class="button" routerLink="/newLote">
-                    <div class="icon-circle"><mat-icon style="color: green;">add</mat-icon></div>
-                    Agregar Lote
-                  </button>
-            </div>
-        </div>
-        <div >
-            <h1  class="descripcion">LOTES DE LA FINCA</h1>
-        </div>
-        <div class="table-container">
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th>Foto</th>
-                    <th>Nombre</th>
-                    <th>Ubicación</th>
-                    <th>Opciones</th>
-                    <th>Ver Árboles</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let lote of lotes">
-                    <td>{{ lote.id }}</td>
-                    <td>{{ lote.nombre }}</td>
-                    <td>{{ lote.ubicacion }}</td>
-                    <td>
-                        <button class="btn btn-primary" ><i class="fas fa-edit"></i></button>
-                        <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
-                    </td>
-                    <td>
-                        <button class="btn btn-warning" (click)='navigateToOtherView()'><i class="fas fa-eye fa-lg"></i>
-                        </button>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-              
-        </div>
-    </form>
-</div>-->
+
+<div [ngClass]="{'centered-container': isLoadingResults==false}">
+
+<div *ngIf="isLoadingResults==false">
+  <!-- Spinner de carga -->
+  <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</div></div>
