--- a/src/app/components/inventario-general/inventario-general.component.html
+++ b/src/app/components/inventario-general/inventario-general.component.html
@@ -28,7 +28,7 @@
       </div>
 
     </div>
-    <div class="table-container">
+    <!--<div class="table-container">
           <div style="width: 100%;height:100%;">
             <canvas
             baseChart
@@ -38,8 +38,10 @@
             [options]="barChartOptions">
             </canvas>
           </div>
+    </div>-->
+    <div>
+      <canvasjs-chart [options]="chartOptions"></canvasjs-chart>
     </div>
-    
 </div>
 
 <div class="footer">
