--- a/src/app/components/new-arbol/new-arbol.component.html
+++ b/src/app/components/new-arbol/new-arbol.component.html
@@ -7,7 +7,7 @@
           <i class="fas fa-arrow-left" style="color: rgb(255, 255, 255);"></i>
         </a>
       </div>
-      <h1 class="mx-auto" style="font-size: 15px;">FINCA LA BENDICIÓN JUTIAPA</h1>
+      <h1 class="mx-auto" style="font-size: 15px;">{{NombreFinca}}</h1>
       <div class="logo-circle">
         <img src="/assets/img/logo.png" alt="logo" class="logo-img">
       </div>
