--- a/src/app/components/lotes-list/lotes-list.component.html
+++ b/src/app/components/lotes-list/lotes-list.component.html
@@ -27,8 +27,8 @@
         </div>
         <div class="col text-center">
             <div class="input-group stylish-input-group">
-              <input [(ngModel)]="searchTerm" (ngModelChange)="searchLotes()" class="form-control" placeholder="Buscar Lote">
-              <span class="input-group-addon">
+                <input [(ngModel)]="searchTerm" (ngModelChange)="searchLotes()" class="form-control" placeholder="Buscar Lote">
+                <span class="input-group-addon">
                 <button type="submit">
                   <i class="fas fa-search"></i>
                 </button>  
@@ -64,7 +64,7 @@
 
 <div *ngIf="isLoadingResults==false">
   <!-- Spinner de carga -->
-  <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
+  <div class="spinner-border text-secondary" role="status">
     <span class="sr-only">Loading...</span>
   </div>
 </div></div>
