--- a/src/app/components/view-arbol/view-arbol.component.html
+++ b/src/app/components/view-arbol/view-arbol.component.html
@@ -45,9 +45,8 @@
 
   <div *ngIf="isLoadingResults == false" class="text-center">
     <!-- Spinner de carga -->
-    <div class="spinner-grow text-secondary" role="status">
+    <div class="spinner-border text-secondary" role="status">
       <span class="sr-only">Loading...</span>
     </div>
-    <div class="text-secondary" style="font-size: 10px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Espere por favor...</div>
   </div>
 </div>
