optimizacion img principales

--- a/src/app/components/arboles-siguiente/arboles-siguiente.component.html
+++ b/src/app/components/arboles-siguiente/arboles-siguiente.component.html
@@ -18,7 +18,7 @@
             <div class="encabezado-recoverPass ">
                 <h1 for="" class="descripcion">ÁRBOLES DEL LOTE: {{identificador}}</h1>
             </div>
-            <img src="/assets/img/arboles.png" alt="" class="imgLote">
+            <img src="/assets/img/arboles.webp" alt="" class="imgLote">
             <div class="row">
                 <button (click)="listaArboles()" style="background: green; font:oblique; color: white;  border-radius: 20px;" class="col btn-1 btn" >Siguiente</button>
             </div>
