--- a/src/app/components/lotes-view/lotes-view.component.html
+++ b/src/app/components/lotes-view/lotes-view.component.html
@@ -15,7 +15,7 @@
                 <h1 for="" class="descripcion">LOTES DE LA FINCA</h1>
                 <h1 for="" style="color: rgb(63, 150, 45);"class="descripcion2">{{NombreFinca}}</h1>
             </div>
-            <img src="/assets/img/lote.png" alt="" class="imgLote">
+            <img src="/assets/img/lote.webp" alt="" class="imgLote">
             <div class="row">
                 <button style="background: green; font:oblique; color: white;  border-radius: 20px;" class="col btn-1 btn" routerLink="/lotesLista">Siguiente</button>
             </div>
