--- a/src/app/components/tipo-control/tipo-control.component.html
+++ b/src/app/components/tipo-control/tipo-control.component.html
@@ -17,7 +17,7 @@
             </div>
             <div class="informacion2">
                 <span class="campo-informativo" style="color: rgb(63, 150, 45);" id="tipoControl" >FITOSANITARIO</span>
-                <img (click)='tipoControl()' src="/assets/img/fitosanitario.png" alt="" class="tipoFitosanitario" routerLink="/finca">
+                <img (click)='tipoControl()' src="/assets/img/fitosanitario.webp" alt="" class="tipoFitosanitario" routerLink="/finca">
             </div>
             <div class="informacion2" style="display: none;" >
                 <span class="campo-informativo" style="color: rgb(63, 150, 45);" id="tipoControl">FENOLÓGICA</span>
