--- a/src/app/components/inventario-general/inventario-general.component.html
+++ b/src/app/components/inventario-general/inventario-general.component.html
@@ -5,6 +5,8 @@
   <script src="/Chart.js/Chart.min.js"></script>
   <script src="/angular-chart.js/dist/angular-chart.min.js"></script>
    <link rel="stylesheet" href="/angular-chart.js/dist/angular-chart.css">
+   <div class="fixed-menu">
+
 <nav class="navbar ">
     <div class="container-fluid">
   
@@ -20,6 +22,7 @@
       </div>
     </div>
   </nav>
+   </div>
   <div class="viewLote">
     <div >
       <div style="text-align: center;">
