--- a/src/app/components/new-lote/new-lote.component.html
+++ b/src/app/components/new-lote/new-lote.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
+<div class="fixed-menu">
 <nav class="navbar ">
     <div class="container-fluid">
 
@@ -15,6 +15,7 @@
         </div>
     </div>
 </nav>
+</div>
 <div class="contenedor-tipoControl">
        
         <div class="circle-container">
