--- a/src/app/components/quimicos-recomendados/quimicos-recomendados.component.html
+++ b/src/app/components/quimicos-recomendados/quimicos-recomendados.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
+<div class="fixed-menu">
 <nav class="navbar">
   <div class="container-fluid">
     <div class="back-link">
@@ -13,7 +13,7 @@
     </div>
   </div>
 </nav>
-
+</div>
 <div class="viewLote">
   <div style="display: grid; place-items: center; ">
     <button (click)="generarPDF()"
