--- a/src/app/components/view-arbol/view-arbol.component.html
+++ b/src/app/components/view-arbol/view-arbol.component.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<div class="fixed-menu">
 <nav class="navbar ">
     <div class="container-fluid">
 
@@ -14,6 +15,7 @@
         </div>
     </div>
 </nav>
+</div>
 <div class="viewLote">
         <div >
             <h1  style="background-color: rgb(190, 190, 190);"class="descripcion">DETALLE ÁRBOL</h1>
