inventario cambio de data a mostrar

--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="row">
-                <button (click)="crearRegistroUsuario(nombres.value,apellidos.value,fechaNacimiento.value,numeroTel.value,dpi.value,direccion.value,correo.value,pass1.value)" style="background: green; font:oblique; color: white;  border-radius: 20px;" class="col btn-1 btn" type="submit">Registrar</button>
+                <button (click)="crearRegistroUsuario(nombres.value,apellidos.value,fechaNacimiento.value,numeroTel.value,dpi.value,direccion.value,correo.value,pass1.value,pass2.value)" style="background: green; font:oblique; color: white;  border-radius: 20px;" class="col btn-1 btn" type="submit">Registrar</button>
             </div>
            <br>
         </form>
