--- a/src/app/components/inventario-general/inventario-general.component.html
+++ b/src/app/components/inventario-general/inventario-general.component.html
@@ -26,7 +26,7 @@
   <div class="viewLote">
     <div >
       <div style="text-align: center;">
-        <h1 style="background-color: rgb(197, 239, 173);" class="descripcion">Gráfico de Lotes y Árboles por Fecha</h1>
+        <h1 style="background-color: rgb(197, 239, 173);" class="descripcion">Estadísticas de Lotes</h1>
         <img src="/assets/img/reproteGrafica.png" style="height: 80px; width: 80px; display: block; margin: 20px auto;">
       </div>
 
